docs/envoy/v1.11.0/_sources/api-v2/api/v2/discovery.proto.rst.txt
.. _envoy_api_file_envoy/api/v2/discovery.proto:

Common discovery API components
===============================


.. _envoy_api_msg_DiscoveryRequest:

DiscoveryRequest
----------------

`[DiscoveryRequest proto] <https://github.com/envoyproxy/envoy/blob/v1.11.0/api/envoy/api/v2/discovery.proto#L22>`_

A DiscoveryRequest requests a set of versioned resources of the same type for
a given Envoy node on some API.

.. code-block:: json

  {
    "version_info": "...",
    "node": "{...}",
    "resource_names": [],
    "type_url": "...",
    "response_nonce": "...",
    "error_detail": "{...}"
  }

.. _envoy_api_field_DiscoveryRequest.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The version_info provided in the request messages will be the version_info
  received with the most recent successfully processed response or empty on
  the first request. It is expected that no new request is sent after a
  response is received until the Envoy instance is ready to ACK/NACK the new
  configuration. ACK/NACK takes place by returning the new API config version
  as applied or the previous API config version respectively. Each type_url
  (see below) has an independent version associated with it.
  
  
.. _envoy_api_field_DiscoveryRequest.node:

node
  (:ref:`core.Node <envoy_api_msg_core.Node>`) The node making the request.
  
  
.. _envoy_api_field_DiscoveryRequest.resource_names:

resource_names
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) List of resources to subscribe to, e.g. list of cluster names or a route
  configuration name. If this is empty, all resources for the API are
  returned. LDS/CDS expect empty resource_names, since this is global
  discovery for the Envoy instance. The LDS and CDS responses will then imply
  a number of resources that need to be fetched via EDS/RDS, which will be
  explicitly enumerated in resource_names.
  
  
.. _envoy_api_field_DiscoveryRequest.type_url:

type_url
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Type of the resource that is being requested, e.g.
  "type.googleapis.com/envoy.api.v2.ClusterLoadAssignment". This is implicit
  in requests made via singleton xDS APIs such as CDS, LDS, etc. but is
  required for ADS.
  
  
.. _envoy_api_field_DiscoveryRequest.response_nonce:

response_nonce
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) nonce corresponding to DiscoveryResponse being ACK/NACKed. See above
  discussion on version_info and the DiscoveryResponse nonce comment. This
  may be empty if no nonce is available, e.g. at startup or for non-stream
  xDS implementations.
  
  
.. _envoy_api_field_DiscoveryRequest.error_detail:

error_detail
  (`Status <https://cloud.google.com/natural-language/docs/reference/rpc/google.rpc#status>`_) This is populated when the previous :ref:`DiscoveryResponse <envoy_api_msg_DiscoveryResponse>`
  failed to update configuration. The *message* field in *error_details* provides the Envoy
  internal exception related to the failure. It is only intended for consumption during manual
  debugging, the string provided is not guaranteed to be stable across Envoy versions.
  
  


.. _envoy_api_msg_DiscoveryResponse:

DiscoveryResponse
-----------------

`[DiscoveryResponse proto] <https://github.com/envoyproxy/envoy/blob/v1.11.0/api/envoy/api/v2/discovery.proto#L62>`_


.. code-block:: json

  {
    "version_info": "...",
    "resources": [],
    "type_url": "...",
    "nonce": "..."
  }

.. _envoy_api_field_DiscoveryResponse.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The version of the response data.
  
  
.. _envoy_api_field_DiscoveryResponse.resources:

resources
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The response resources. These resources are typed and depend on the API being called.
  
  

.. _envoy_api_field_DiscoveryResponse.type_url:

type_url
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Type URL for resources. Identifies the xDS API when muxing over ADS.
  Must be consistent with the type_url in the 'resources' repeated Any (if non-empty).
  
  
.. _envoy_api_field_DiscoveryResponse.nonce:

nonce
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) For gRPC based subscriptions, the nonce provides a way to explicitly ack a
  specific DiscoveryResponse in a following DiscoveryRequest. Additional
  messages may have been sent by Envoy to the management server for the
  previous version on the stream prior to this DiscoveryResponse, that were
  unprocessed at response send time. The nonce allows the management server
  to ignore any further DiscoveryRequests for the previous version until a
  DiscoveryRequest bearing the nonce. The nonce is optional and is not
  required for non-stream based xDS implementations.
  
  



.. _envoy_api_msg_DeltaDiscoveryRequest:

DeltaDiscoveryRequest
---------------------

`[DeltaDiscoveryRequest proto] <https://github.com/envoyproxy/envoy/blob/v1.11.0/api/envoy/api/v2/discovery.proto#L136>`_

DeltaDiscoveryRequest and DeltaDiscoveryResponse are used in a new gRPC
endpoint for Delta xDS.

With Delta xDS, the DeltaDiscoveryResponses do not need to include a full
snapshot of the tracked resources. Instead, DeltaDiscoveryResponses are a
diff to the state of a xDS client.
In Delta XDS there are per-resource versions, which allow tracking state at
the resource granularity.
An xDS Delta session is always in the context of a gRPC bidirectional
stream. This allows the xDS server to keep track of the state of xDS clients
connected to it.

In Delta xDS the nonce field is required and used to pair
DeltaDiscoveryResponse to a DeltaDiscoveryRequest ACK or NACK.
Optionally, a response message level system_version_info is present for
debugging purposes only.

DeltaDiscoveryRequest plays two independent roles. Any DeltaDiscoveryRequest
can be either or both of: [1] informing the server of what resources the
client has gained/lost interest in (using resource_names_subscribe and
resource_names_unsubscribe), or [2] (N)ACKing an earlier resource update from
the server (using response_nonce, with presence of error_detail making it a NACK).
Additionally, the first message (for a given type_url) of a reconnected gRPC stream
has a third role: informing the server of the resources (and their versions)
that the client already possesses, using the initial_resource_versions field.

As with state-of-the-world, when multiple resource types are multiplexed (ADS),
all requests/acknowledgments/updates are logically walled off by type_url:
a Cluster ACK exists in a completely separate world from a prior Route NACK.
In particular, initial_resource_versions being sent at the "start" of every
gRPC stream actually entails a message for each type_url, each with its own
initial_resource_versions.

.. code-block:: json

  {
    "node": "{...}",
    "type_url": "...",
    "resource_names_subscribe": [],
    "resource_names_unsubscribe": [],
    "initial_resource_versions": "{...}",
    "response_nonce": "...",
    "error_detail": "{...}"
  }

.. _envoy_api_field_DeltaDiscoveryRequest.node:

node
  (:ref:`core.Node <envoy_api_msg_core.Node>`) The node making the request.
  
  
.. _envoy_api_field_DeltaDiscoveryRequest.type_url:

type_url
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Type of the resource that is being requested, e.g.
  "type.googleapis.com/envoy.api.v2.ClusterLoadAssignment".
  
  
.. _envoy_api_field_DeltaDiscoveryRequest.resource_names_subscribe:

resource_names_subscribe
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) DeltaDiscoveryRequests allow the client to add or remove individual
  resources to the set of tracked resources in the context of a stream.
  All resource names in the resource_names_subscribe list are added to the
  set of tracked resources and all resource names in the resource_names_unsubscribe
  list are removed from the set of tracked resources.
  
  *Unlike* state-of-the-world xDS, an empty resource_names_subscribe or
  resource_names_unsubscribe list simply means that no resources are to be
  added or removed to the resource list.
  *Like* state-of-the-world xDS, the server must send updates for all tracked
  resources, but can also send updates for resources the client has not subscribed to.
  
  NOTE: the server must respond with all resources listed in resource_names_subscribe,
  even if it believes the client has the most recent version of them. The reason:
  the client may have dropped them, but then regained interest before it had a chance
  to send the unsubscribe message. See DeltaSubscriptionStateTest.RemoveThenAdd.
  
  These two fields can be set in any DeltaDiscoveryRequest, including ACKs
  and initial_resource_versions.
  
  A list of Resource names to add to the list of tracked resources.
  
  
.. _envoy_api_field_DeltaDiscoveryRequest.resource_names_unsubscribe:

resource_names_unsubscribe
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) A list of Resource names to remove from the list of tracked resources.
  
  
.. _envoy_api_field_DeltaDiscoveryRequest.initial_resource_versions:

initial_resource_versions
  (map<`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, `string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_>) Informs the server of the versions of the resources the xDS client knows of, to enable the
  client to continue the same logical xDS session even in the face of gRPC stream reconnection.
  It will not be populated: [1] in the very first stream of a session, since the client will
  not yet have any resources,  [2] in any message after the first in a stream (for a given
  type_url), since the server will already be correctly tracking the client's state.
  (In ADS, the first message *of each type_url* of a reconnected stream populates this map.)
  The map's keys are names of xDS resources known to the xDS client.
  The map's values are opaque resource versions.
  
  
.. _envoy_api_field_DeltaDiscoveryRequest.response_nonce:

response_nonce
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) When the DeltaDiscoveryRequest is a ACK or NACK message in response
  to a previous DeltaDiscoveryResponse, the response_nonce must be the
  nonce in the DeltaDiscoveryResponse.
  Otherwise response_nonce must be omitted.
  
  
.. _envoy_api_field_DeltaDiscoveryRequest.error_detail:

error_detail
  (`Status <https://cloud.google.com/natural-language/docs/reference/rpc/google.rpc#status>`_) This is populated when the previous :ref:`DiscoveryResponse <envoy_api_msg_DiscoveryResponse>`
  failed to update configuration. The *message* field in *error_details*
  provides the Envoy internal exception related to the failure.
  
  


.. _envoy_api_msg_DeltaDiscoveryResponse:

DeltaDiscoveryResponse
----------------------

`[DeltaDiscoveryResponse proto] <https://github.com/envoyproxy/envoy/blob/v1.11.0/api/envoy/api/v2/discovery.proto#L192>`_


.. code-block:: json

  {
    "system_version_info": "...",
    "resources": [],
    "type_url": "...",
    "removed_resources": [],
    "nonce": "..."
  }

.. _envoy_api_field_DeltaDiscoveryResponse.system_version_info:

system_version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The version of the response data (used for debugging).
  
  
.. _envoy_api_field_DeltaDiscoveryResponse.resources:

resources
  (:ref:`Resource <envoy_api_msg_Resource>`) The response resources. These are typed resources, whose types must match
  the type_url field.
  
  
.. _envoy_api_field_DeltaDiscoveryResponse.type_url:

type_url
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Type URL for resources. Identifies the xDS API when muxing over ADS.
  Must be consistent with the type_url in the Any within 'resources' if 'resources' is non-empty.
  
  
.. _envoy_api_field_DeltaDiscoveryResponse.removed_resources:

removed_resources
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Resources names of resources that have be deleted and to be removed from the xDS Client.
  Removed resources for missing resources can be ignored.
  
  
.. _envoy_api_field_DeltaDiscoveryResponse.nonce:

nonce
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The nonce provides a way for DeltaDiscoveryRequests to uniquely
  reference a DeltaDiscoveryResponse when (N)ACKing. The nonce is required.
  
  


.. _envoy_api_msg_Resource:

Resource
--------

`[Resource proto] <https://github.com/envoyproxy/envoy/blob/v1.11.0/api/envoy/api/v2/discovery.proto#L215>`_


.. code-block:: json

  {
    "name": "...",
    "version": "...",
    "resource": "{...}"
  }

.. _envoy_api_field_Resource.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The resource's name, to distinguish it from others of the same type of resource.
  
  

.. _envoy_api_field_Resource.version:

version
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The resource level version. It allows xDS to track the state of individual
  resources.
  
  
.. _envoy_api_field_Resource.resource:

resource
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The resource being tracked.
  
  

